--- a/app/frontend/templates/settings.html
+++ b/app/frontend/templates/settings.html
@@ -6,15 +6,15 @@
         <div class="container col-xxl-8 px-2 py-2 bg-white">
             <div class="row flex-lg-row align-items-center g-0 py-5">
                 <div class="col-10 col-sm-8 col-lg-4 mb-3 mx-auto px-4 py-4 d-flex justify-content-center">
-                    {# TODO #}
+
                     {% if session['user_photo'] %}
-                    <img class="bg-light rounded-circle d-block img-cover text-white p-1" width="300" height="300"
-                         alt="avatar"
-                         src="{{ session['user_photo'] }}">
+                        <img class="bg-light rounded-circle d-block img-cover text-white p-1" width="300" height="300"
+                             alt="avatar"
+                             src="{{ session['user_photo'] }}">
                     {% else %}
-                    <img class="bg-light rounded-circle d-block img-fluid text-white p-1" width="300" height="300"
-                         alt="avatar"
-                         src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg">
+                        <img class="bg-light rounded-circle d-block img-fluid text-white p-1" width="300" height="300"
+                             alt="avatar"
+                             src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg">
                     {% endif %}
                 </div>
                 <div class="col-lg-8">
@@ -59,7 +59,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <h1 class="display-5">Change Avatar</h1> {# TODO #}
+                            <h1 class="display-5">Change Avatar</h1>
                             <form method="post" enctype="multipart/form-data">
                                 <div class="input-group">
                                     <input class="form-control remove-glow" type="file" name="img" id="formFile"
@@ -77,12 +77,14 @@
                             <form method="post">
                                 <div class="mb-3">
                                     <label for="InputOldPassword" class="form-label">Old password</label>
-                                    <input type="password" name="old_password" minlength="8" class="form-control remove-glow" id="InputOldPassword"
+                                    <input type="password" name="old_password" minlength="8"
+                                           class="form-control remove-glow" id="InputOldPassword"
                                            required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="InputNewPassword" class="form-label">New password</label>
-                                    <input type="password" name="new_password" minlength="8" class="form-control remove-glow" id="InputNewPassword"
+                                    <input type="password" name="new_password" minlength="8"
+                                           class="form-control remove-glow" id="InputNewPassword"
                                            required>
                                 </div>
                                 <button type="submit" name="password-change"
@@ -103,15 +105,16 @@
         <div class="toast-container position-fixed top-0 end-0 p-3">
 
             {% for m in messages %}
-            <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
-                <div class="toast-header">
-                    <strong class="me-auto">Message</strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true"
+                     data-bs-autohide="false">
+                    <div class="toast-header">
+                        <strong class="me-auto">Message</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        {{ m }}
+                    </div>
                 </div>
-                <div class="toast-body">
-                    {{ m }}
-                </div>
-            </div>
 
             {% endfor %}
 
