--- a/app/frontend/templates/artist.html
+++ b/app/frontend/templates/artist.html
@@ -122,7 +122,7 @@
                                     <div>
                                         {% if session['logged_in'] %}
                                             <div>
-                                                <form class="g-0 mb-2">
+                                                <form class="g-0 mb-2" method="post">
                                                     <div class="d-flex justify-content-between">
                                                         <div>
                                                             <input id="input-id" value="4" type="text" class="rating"
